*************************************************************************************************************
*************************************************************************************************************
                                      MPlayer Core CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 21-08-2004 fixed: shoutcast streams
  - 20-08-2004 fixed: allow percentage seeking in realmedia
  - 20-08-2004 fixed: disable fflush in mp_msg.c for now, to allow mplayerdebug
  - 20-08-2004 added: void mplayer_setTimeMs(__int64 iTime), for more precision
  - 20-08-2004 changed: only use alternative way of calculating progressbar as a fallback
  - 19-08-2004 fixed: vobsubs should really be fixed now
  - 19-08-2004 changed: updated XviD libraries from 1.0.0 to 1.0.1
  - 19-08-2004 fixed: playdvd should work in xbmc now
  - 19-08-2004 fixed: play dvd was not working in xbmc
  - 18-08-2004 fixed: current time not showing in xbmc
  - 18-08-2004 fixed: some libraries that were commited as ascii
  - 18-08-2004 added: libdts 0.0.2 lib and header file
  - 17-08-2004 fixed: vobsub.c with butcher's fixes
  - 17-08-2004 added: libdts 0.0.2 for DTS decoding
  - 17-08-2004 added: pre5 sources to main branch.