@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 20-09-2004 added: new commandline option limitedhwac3, disables hwac3 for 2ch streams to let a52 decode it.
   - 21-08-2004 fixed: shoutcast streams
   - 20-08-2004 fixed: allow percentage seeking in realmedia
   - 20-08-2004 fixed: disable fflush in mp_msg.c for now, to allow mplayerdebug
